--- a/css/custom.css
+++ b/css/custom.css
@@ -39,6 +39,7 @@
 	
 }
 @media (max-width:768px){
+  .spacer{height:0px;}
 	.navbar-default{height:auto;}
 	.navbar-nav li a{padding:10px}
 	.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{padding:10px; text-decoration:none; background:#ccc; color:#ffffff}
