--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ hr{border-color:transparent; margin:15px 0;}
 
 /*----------------------------------containerH----------------------*/
 .spacer{height:80px;}
+@media (max-width:767px){
+  .spacer{height:0px;}
+}
 .banner-home{background:-moz-linear-gradient(left, #51bf00 0%, #51bf00 48%, #ffffff 48%, #ffffff 100%); 
 background: -webkit-gradient(linear, left top, right top, color-stop(0%,#51bf00), color-stop(48%,#51bf00), color-stop(48%,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
 background: -webkit-linear-gradient(left, #51bf00 0%,#51bf00 48%,#ffffff 51%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
@@ -53,7 +56,7 @@ color: #ffffff; padding: 10px 20px; border-radius:10px; -moz-border-radius:10px;
 p.pwrap span{font-size: 13px;}
 /*----------------------------------mech----------------------*/
 .mech-wrap p{font-size: 12px;}
-.mech-wrap .mech-p p{text-align: center;}
+.mech-wrap .mech-p p{text-align: center; font-size: 120%; font-weight: bold}
 table.mech-tab tr td{text-align: left; font-size: 12px; border: 1px solid #cccccc; padding: 5px;}
 .mech-wrap{background:#ffffff; padding:80px 0px 10px 0px;}
 /*----------------------------------footer----------------------*/
