--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ hr{border-color:transparent; margin:15px 0;}
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle {background: #2C2E2F}
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover{background: #00AECB;}
 
-#home, #about, #howToJoin, #sponsors{height: 500px;}
+#home, #about, #howToJoin, #sponsors, #faq{height: 500px;}
 #mechanics{height:780px;}
 
 /*----------------------------------containerH----------------------*/
