--- a/css/custom.css
+++ b/css/custom.css
@@ -31,7 +31,7 @@
 }    
 @media (max-width: 767px) {	
 	h3{font-size: 16px}	
-		
+	.banner{padding-top:20px}
 }
 @media (min-width: 481px) and (max-width:767px){
 	h1{font-size: 20px}
